--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/index/index.css">
 </head>
 <body>
     <div class="header">
@@ -14,7 +15,7 @@
         </div>
 
         <div class="header__button">
-            <img src="" alt="">
+            <img src="img/cart.svg" alt="">
         </div>
     </div>
 
@@ -22,7 +23,6 @@
         <div class="main">
             <img src="img/main-orange.svg" alt="">
             <div class="main-text">
-                <img src="img/background_dot.svg" alt="">
                 <div class="main-text__title">Start eating healthy right now and here!</div>
                 <div class="arrow-button">
                     <span>Start buying</span>
