Start filter dev

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/index/index.css">
 </head>
 <body>
-    <div class="header">
-        <div class="containet">
+    <div class="containet">
+        <div class="header">
             <div class="header__logo">
                 <img src="img/logo.svg" alt="">
                 <span>VitaminShop</span>
@@ -34,9 +34,9 @@
                 </div>
             </div>
 
-            <img src="img/mouse.svg" alt="" class="mouser">
+            <p class="mouser"><img src="img/mouse.svg" alt=""></p>
 
-            <img src="img/to_arrows.svg" alt="" class="to-arrow">
+            <p class="to-arrow"><img src="img/to_arrows.svg" alt=""></p>
 
             <div class="filter">
                 <div class="categorys">
