Add the filters and categorys

--- a/index.html
+++ b/index.html
@@ -40,29 +40,37 @@
 
             <div class="filter">
                 <div class="categorys">
-                    <div class="citem">
-                        <img src="" alt="">
-                        <div class="citem__text">
-                            <div class="citem__text__title">Fruit's</div>
+                    <div class="citem-active">
+                        <img src="img/lemon.svg" alt="">
+                        <div class="citem-text">
+                            <div class="citem-text__title">Fruit's</div>
                             <img src="img/white-arrow.svg" alt="">
+                        </div>
+                    </div>
+
+                    <div class="citem">
+                        <img src="img/carrot.svg" alt="">
+                        <div class="citem-text">
+                            <div class="citem-text__title">Veggies</div>
+                            <img src="img/black-arrow.svg" alt="">
                         </div>
                     </div>
                 </div>
 
                 <div class="filters">
                     <div class="search">
-                        <input type="text">
+                        <input type="text" placeholder="Enter the product name">
                         <div class="arrow-button">
-                            <span>Start buying</span>
+                            <span>Find</span>
                             <img src="img/arrow.svg" alt="">
                         </div>
                     </div>
 
                     <div class="sort">
-                        <span>Sort by</span>
+                        <span class="sort__title">Sort by</span>
                         <div class="sort__type">
                             <span>Price</span>
-                            <img src="img/arrow.svg" alt="">
+                            <img src="img/yellow-arrow.svg" alt="">
                         </div>
                     </div>
                 </div>
