Set style in cards

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <img src="img/main-orange.svg" alt="">
                 <div class="main-text">
                     <div class="main-text__title">Start eating healthy right now and here!</div>
-                    <div class="arrow-button">
+                    <div style="margin-top: 20px;" class="arrow-button">
                         <span>Start buying</span>
                         <img src="img/arrow.svg" alt="">
                     </div>
@@ -80,11 +80,28 @@
 
             <div class="cards">
                 <div class="card">
-                    <img src="img/products/apple.svg" alt="">
+                    <img class="card_ava" src="img/products/apple.svg" alt="">
                     <p>Apples <span>max 10 kg.</span></p>
 
                     <div class="size">
-                        <div class="size__item">Small</div>
+                        <div class="size__item-active">Small</div>
+                        <div class="size__item">Large</div>
+                    </div>
+
+                    <div class="final">
+                        <div class="final__price">$5.0</div>
+                        <div class="final__button-selected">
+                            <img src="img/cart.svg" alt="">
+                            <span>Added</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card_ava" src="img/products/apple.svg" alt="">
+                    <p>Apples <span>max 10 kg.</span></p>
+
+                    <div class="size">
+                        <div class="size__item-active">Small</div>
                         <div class="size__item">Large</div>
                     </div>
 
@@ -96,16 +113,38 @@
                         </div>
                     </div>
                 </div>
-            </div>
+                <div class="card">
+                    <img class="card_ava" src="img/products/apple.svg" alt="">
+                    <p>Apples <span>max 10 kg.</span></p>
 
-            <div class="mail">
-                <img src="img/close.svg" alt="" class="mail__close">
-                <div class="mail__title">Join our mailing list.</div>
-                <div class="mail__subtitle">Recieve 15% off your order at checkout and save today!</div>
-                <div class="send">
-                    <input type="text">
-                    <div class="send__button">
-                        <img src="img/arrow.svg" alt="">
+                    <div class="size">
+                        <div class="size__item-active">Small</div>
+                        <div class="size__item">Large</div>
+                    </div>
+
+                    <div class="final">
+                        <div class="final__price">$5.0</div>
+                        <div class="final__button">
+                            <img src="img/cart.svg" alt="">
+                            <span>Add to cart</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card_ava" src="img/products/apple.svg" alt="">
+                    <p>Apples <span>max 10 kg.</span></p>
+
+                    <div class="size">
+                        <div class="size__item-active">Small</div>
+                        <div class="size__item">Large</div>
+                    </div>
+
+                    <div class="final">
+                        <div class="final__price">$5.0</div>
+                        <div class="final__button">
+                            <img src="img/cart.svg" alt="">
+                            <span>Add to cart</span>
+                        </div>
                     </div>
                 </div>
             </div>
